# tcglookup-py

./: .gitignore  README.md  pyproject.toml
src/tcglookup/: __init__.py  client.py  errors.py
tests/: test_client.py
