[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcglookup"
version = "0.1.0"
description = "Python SDK for TCG Price Lookup — live trading card prices across Pokemon, MTG, Yu-Gi-Oh, Lorcana, One Piece, SWU, Flesh and Blood"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "TCG Price Lookup", email = "contact@tcgpricelookup.com" }]
keywords = ["tcg", "trading-card-game", "pokemon", "mtg", "yugioh", "lorcana", "one-piece", "flesh-and-blood", "star-wars-unlimited", "card-prices", "tcgplayer", "ebay"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.25",
]

[project.urls]
Homepage = "https://tcgpricelookup.com/tcg-api"
Documentation = "https://tcgpricelookup.com/tcg-api"
Repository = "https://github.com/TCG-Price-Lookup/tcglookup-py"
Issues = "https://github.com/TCG-Price-Lookup/tcglookup-py/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-httpx>=0.30", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/tcglookup"]
